#3 Add eslint and prettier config + apply

--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -12,6 +12,6 @@
     background-color: $dark-purple;
   }
   &:focus {
-    outline: 3px solid rgba($primary-color, 0.65)
+    outline: 3px solid rgba($primary-color, 0.65);
   }
 }
