--- a/src/scss/_override-fonts.scss
+++ b/src/scss/_override-fonts.scss
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Flanders Art Sans';
-  src:
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Light.ttf') format('truetype'),
+  src: url('/node_modules/pyoes/fonts/FlandersArtSans-Light.ttf') format('truetype'),
     url('/node_modules/pyoes/fonts/FlandersArtSans-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
@@ -9,8 +8,7 @@
 
 @font-face {
   font-family: 'Flanders Art Sans';
-  src:
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Regular.ttf') format('truetype'),
+  src: url('/node_modules/pyoes/fonts/FlandersArtSans-Regular.ttf') format('truetype'),
     url('/node_modules/pyoes/fonts/FlandersArtSans-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
@@ -18,8 +16,7 @@
 
 @font-face {
   font-family: 'Flanders Art Sans';
-  src:
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Medium.ttf') format('truetype'),
+  src: url('/node_modules/pyoes/fonts/FlandersArtSans-Medium.ttf') format('truetype'),
     url('/node_modules/pyoes/fonts/FlandersArtSans-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
@@ -27,8 +24,7 @@
 
 @font-face {
   font-family: 'Flanders Art Sans';
-  src:
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Bold.ttf') format('truetype'),
+  src: url('/node_modules/pyoes/fonts/FlandersArtSans-Bold.ttf') format('truetype'),
     url('/node_modules/pyoes/fonts/FlandersArtSans-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
