--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -1,17 +1,63 @@
-@import 'pyoes/scss/pyoes-settings';
-
 /**
-  @govflanders/vl-ui-design-system-style (Webuniversum styling) currently does not export their variables yet, only 1 bundled css file
-  Later, the variables, when exported, should be overridden here to have our own color branding applied on their components
-  For now, this is a general file where we can override some classes manually
+  This file is used to override @govflanders/vl-ui-design-system-style (Webuniversum styling)
+  Make sure to define the variables you want to overwrite BEFORE importing the scss files
+  Make sure to define the specific styles you want to overwrite AFTER importing the scss files
 **/
 
-.vl-button {
-  background-color: $primary-color;
-  &:hover {
-    background-color: $dark-purple;
-  }
-  &:focus {
-    outline: 3px solid rgba($primary-color, 0.65);
+/**
+------------------------------
+ Start override sass variables
+------------------------------
+**/
+
+// Colors
+$vl-action-color: $primary-color;
+$vl-action-hover-color: $dark-purple;
+$vl-action-active-color: darken($primary-color, 10);
+
+$vl-input-hover-background-color: rgba($primary-color, 0.1) !default;
+$vl-input-hover-border-color: rgba($primary-color, 0.65) !default;
+
+$vl-error-color: $input-error-message-font-color;
+
+/**
+----------------------------
+ End override sass variables
+----------------------------
+**/
+
+@import '@govflanders/vl-ui-design-system-style/scss';
+
+/**
+-------------------------------
+ Start override specific styles
+-------------------------------
+**/
+
+// vl-link
+.vl-link {
+  color: $link-color;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: $link-color;
   }
 }
+
+// vl-multiselect
+.vl-multiselect {
+  .multiselect__element {
+    &:hover {
+      .multiselect__option {
+        box-shadow: none;
+      }
+    }
+  }
+}
+
+/**
+-------------------------------
+ End override specific styles
+-------------------------------
+**/
