--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -34,6 +34,11 @@ $vl-error-color: $input-error-message-font-color;
 -------------------------------
 **/
 
+// vl-button
+.vl-button {
+  cursor: pointer;
+}
+
 // vl-link
 .vl-link {
   color: $link-color;
