--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -34,6 +34,11 @@ $vl-error-color: $input-error-message-font-color;
 -------------------------------
 **/
 
+// vl-button
+.vl-button {
+  cursor: pointer;
+}
+
 // vl-link
 .vl-link {
   color: $link-color;
@@ -54,6 +59,18 @@ $vl-error-color: $input-error-message-font-color;
       }
     }
   }
+}
+
+// vl-dropdown-navigation
+.vl-dropdown-navigation .vl-popover.js-vl-popover--open .vl-dropdown-navigation__toggle,
+.vl-dropdown-navigation .vl-popover.js-vl-popover--open .vl-popover__toggle {
+  color: $white;
+  background-color: $primary-color;
+}
+
+.vl-dropdown-navigation .vl-popover__toggle {
+  background-color: $gray !important;
+  color: $primary-color;
 }
 
 /**
