#26 Apply custom color to vl-tabs and vl-tab

--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -73,6 +73,20 @@ $vl-error-color: $input-error-message-font-color;
   color: $primary-color;
 }
 
+// vl-tabs
+.vl-tabs {
+  .vl-tab {
+    color: $tabs-navigation-bg-color;
+    outline: none;
+
+    &--active {
+      &:visited {
+        color: $black;
+      }
+    }
+  }
+}
+
 /**
 -------------------------------
  End override specific styles
