--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -121,6 +121,10 @@ $vl-error-color: $input-error-message-font-color;
   background-color: $gray;
 }
 
+.vl-u-spacer-right--xxsmall {
+  margin-right: 0.5rem;
+}
+
 /**
 -------------------------------
  End override specific styles
