--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -106,6 +106,11 @@ $vl-error-color: $input-error-message-font-color;
   }
 }
 
+// vl-backdrop
+.vl-backdrop--active {
+  z-index: 999;
+}
+
 // flatpickr - year input color
 .flatpickr-current-month input.cur-year {
   color: $primary-color;
@@ -114,6 +119,10 @@ $vl-error-color: $input-error-message-font-color;
 // flatpickr - today indication
 .flatpickr-calendar.mark-today .flatpickr-day.today:not(.selected) {
   background-color: $gray;
+}
+
+.vl-u-spacer-right--xxsmall {
+  margin-right: 0.5rem;
 }
 
 /**
