--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -20,11 +20,19 @@ $vl-input-hover-border-color: rgba($primary-color, 0.65) !default;
 
 $vl-error-color: $input-error-message-font-color;
 
+// Fonts
+$vl-font-location: '@govflanders/vl-ui-design-system-style/assets/font/flanders/';
+$vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/iconfont/';
+
 /**
 ----------------------------
  End override sass variables
 ----------------------------
 **/
+
+// Import core and custom component styling
+@import '@govflanders/vl-ui-core/src/scss/core';
+@import '@govflanders/vl-ui-autocomplete/src/scss/autocomplete';
 
 @import '@govflanders/vl-ui-design-system-style/scss';
 
