#139 implement native select

--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -33,6 +33,7 @@ $vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/icon
 // Import core and custom component styling
 @import '@govflanders/vl-ui-core/src/scss/core';
 @import '@govflanders/vl-ui-autocomplete/src/scss/autocomplete';
+@import '@govflanders/vl-ui-select/src/scss/select';
 
 @import '@govflanders/vl-ui-design-system-style/scss';
 /**
