#132 fixed actor widget layout in storybook

--- a/.storybook/main.scss
+++ b/.storybook/main.scss
@@ -1,3 +1,14 @@
 .sb-story {
   padding: 20px;
+
+  .vl-modal {
+    > dialog {
+      position: sticky;
+      transform: none;
+    }
+  }
+}
+
+.vl-modal-backdrop {
+  display: none;
 }
