--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -102,8 +102,9 @@ $vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/icon
 
 // vl-tabs
 .vl-tabs__wrapper {
-  width: fit-content;
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .vl-tab__pane {
   outline: none;
