--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -101,15 +101,21 @@ $vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/icon
 }
 
 // vl-tabs
+.vl-tabs__wrapper {
+  display: flex;
+  justify-content: center;
+}
+.vl-tab__pane {
+  outline: none;
+  overflow-x: hidden;
+}
 .vl-tabs {
   .vl-tab {
     color: $mid-purple;
     outline: none;
 
     &--active {
-      &:visited {
-        color: $black;
-      }
+      color: $dark-purple;
     }
   }
 }
