--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -100,22 +100,31 @@ $vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/icon
   color: $primary-color;
 }
 
-// vl-tabs
-.vl-tabs__wrapper {
-  display: flex;
-  justify-content: center;
-}
-.vl-tab__pane {
-  outline: none;
-  overflow-x: hidden;
-}
-.vl-tabs {
-  .vl-tab {
-    color: $mid-purple;
-    outline: none;
+// oe-container vl-tabs
+.oe-tabs {
+  .vl-tabs__wrapper {
+    display: flex;
+    justify-content: center;
+  }
 
-    &--active {
-      color: $dark-purple;
+  .vl-tab__pane {
+    outline: none;
+    overflow-x: hidden;
+  }
+
+  .vl-tabs__toggle,
+  .vl-tabs {
+    left: 0 !important;
+  }
+
+  .vl-tabs {
+    .vl-tab {
+      color: $mid-purple;
+      outline: none;
+
+      &--active {
+        color: $dark-purple;
+      }
     }
   }
 }
