#453 Undo action group gaps
Unwanted side-effect coming from @govflanders/vl-ui-design-system-style@3.1.9

--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -219,6 +219,11 @@ body {
   flex: 1;
 }
 
+.vl-action-group {
+  row-gap: unset;
+  gap: unset;
+}
+
 /**
 -------------------------------
  End override specific styles
