--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -86,27 +86,17 @@ $vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/icon
 }
 
 // vl-multiselect
-.vl-multiselect {
-  flex: 1;
+.multiselect.is-disabled {
+  background-color: #f8f9fa;
+  border-color: #b6bfca;
 
-  .multiselect__element {
-    &:hover {
-      .multiselect__option {
-        box-shadow: none;
-      }
-    }
+  * {
+    cursor: default;
   }
+}
 
-  .multiselect__tags {
-    padding-top: 0;
-    display: flex;
-    align-items: center;
-
-    .multiselect__single {
-      margin-bottom: 0;
-      padding-top: 0;
-    }
-  }
+.multiselect-placeholder {
+  color: #a4acb5;
 }
 
 // vl-dropdown-navigation
