--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -51,6 +51,8 @@ $vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/icon
   --vl-theme-fg-color-70: #{mix($vl-mine-shaft, $white, 70%)};
 
   --vl-theme-focus-outline-color: #{mix($primary-color, $white, 65%)};
+
+  --ms-line-height: 1.375;
 }
 
 // vl-button
@@ -86,6 +88,14 @@ $vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/icon
 }
 
 // vl-multiselect
+.multiselect {
+  --ms-line-height: 1.315;
+}
+
+.vl-multiselect {
+  flex: 1;
+}
+
 .multiselect.is-disabled {
   background-color: #f8f9fa;
   border-color: #b6bfca;
