--- a/src/scss/_override-fonts.scss
+++ b/src/scss/_override-fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Flanders Art Sans';
   src:
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Light.ttf') format('truetype'),
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Light.woff') format('woff');
+    url('/node_modules/@OnroerendErfgoed/pyoes/fonts/FlandersArtSans-Light.ttf') format('truetype'),
+    url('/node_modules/@OnroerendErfgoed/pyoes/fonts/FlandersArtSans-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
 }
@@ -10,8 +10,8 @@
 @font-face {
   font-family: 'Flanders Art Sans';
   src:
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Regular.ttf') format('truetype'),
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Regular.woff') format('woff');
+    url('/node_modules/@OnroerendErfgoed/pyoes/fonts/FlandersArtSans-Regular.ttf') format('truetype'),
+    url('/node_modules/@OnroerendErfgoed/pyoes/fonts/FlandersArtSans-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
@@ -19,8 +19,8 @@
 @font-face {
   font-family: 'Flanders Art Sans';
   src:
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Medium.ttf') format('truetype'),
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Medium.woff') format('woff');
+    url('/node_modules/@OnroerendErfgoed/pyoes/fonts/FlandersArtSans-Medium.ttf') format('truetype'),
+    url('/node_modules/@OnroerendErfgoed/pyoes/fonts/FlandersArtSans-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
 }
@@ -28,8 +28,8 @@
 @font-face {
   font-family: 'Flanders Art Sans';
   src:
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Bold.ttf') format('truetype'),
-    url('/node_modules/pyoes/fonts/FlandersArtSans-Bold.woff') format('woff');
+    url('/node_modules/@OnroerendErfgoed/pyoes/fonts/FlandersArtSans-Bold.ttf') format('truetype'),
+    url('/node_modules/@OnroerendErfgoed/pyoes/fonts/FlandersArtSans-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
